estilo.css
/* ... */
.divContenedorInicio{
    border:solid red 10px;

   overflow: hidden;

    width:100%; 



   
     

}

/* el contenedor principal del la plantilla de inicio de navegacion de usuario */
.containerPrincipal{
  

     background-color: grey;
     /* background-image: url("https://wallpapers.com/images/high/indigo-ggt7xhxuo1yn46n7.webp"); */
    /* width: 100%; */
    height: 150%;
    border:solid black 2px;
     gap:2px; 

     display: flex;
     flex-direction: column;
     margin-top: 2px;

        width: 100%;
    background-position: center;

   background-size: cover;
    
   background-image: url("./img/1B.jpg");
    background-size:auto;

background-repeat: repeat;
padding: 0;


}

.contenedorCabecera{
   
    
    height: 18vh;
   border:solid black 1px;
     background-color:transparent;
    background-repeat: no-repeat;
    background-size: cover;;
    

             background: rgba(158, 82, 185, 0.7); /*semitransparente */
    
   backdrop-filter: blur(12px); /*🔥 esto crea el efecto borroso */
   text-align: center;

}

.contenedorNavBar{
    border:solid transparent 1px;
    height: 8vh;

    /* background-color: rgb(180, 158, 182); */
    

             background: rgba(97, 54, 112, 0.7); /*semitransparente */
    
   backdrop-filter: blur(12px); /*🔥 esto crea el efecto borroso */



    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
 
}

.contenedorNavBar button{

   
    font-size: 15px;
    width:30%;


    


    padding: 0;
    overflow: hidden;
    border-right: 1px black solid;
    border-left: 1px white solid;

    border-top: white solid 1px;
    border-bottom: black 1px solid;

    /* background:linear-gradient(90deg, #07000A, #A63EDA, #FFFFFF); */

    /* background:linear-gradient(90deg, #691096, #a456d4, #FFFFFF); */

    background:linear-gradient(90deg, #FCFCFD, #A63EDA, #1E0800);
    /* background:linear-gradient(90deg, #FCFCFD, #A63EDA, #FFFFFF, #FFFFFF) */
}

.contenedorNavBar button:hover{
     border-right: white solid 1px;
  border-left: black solid 3px;

  border-top: 1px black solid;
  border-bottom: 1px white solid;

  color:white;
}

.divContenedorInicio{

    border:solid transparent 1px;

   
    display: flex;
    flex-direction: row;
    justify-content: center;
   
    /* background-image: url("./img/1g.jpg"); */
    background-repeat: no-repeat;
    background-size: cover;;

   padding:5px;

}






#divContenedorInicio2{
    border:solid black 1px;
  
    overflow: hidden;
  /* background-color: green; */
     padding: 0;
gap:1%;

     
}



#ventanaVistaPequena{
    border:solid black 1px;
    border-radius: 5px;
    width: 32%;
  
  

             background: rgba(119, 55, 192, 0.7); /*semitransparente */
             /* background: rgba(146, 145, 145, 0.644); semitransparente */
    
   backdrop-filter: blur(12px); /*🔥 esto crea el efecto borroso */

  
 height: 110vh;
display: flex;
 align-items: flex-start;
justify-content: flex-start;

    padding:0; 
}


#ventanaVistaGrande{
    border:solid black 1px;
    height: 110vh;
      
     width: 67%;
   

     
             background: rgba(119, 55, 192, 0.7); /*semitransparente */
             /* background: rgba(146, 145, 145, 0.644); semitransparente */
    
   backdrop-filter: blur(12px); /*🔥 esto crea el efecto borroso */
    padding:0;



}

#tituloMiniCards{
    border:solid red 1px;
    height: 10%;
    width: 100%;
    border-radius: 3%;

}

#contenidoVistaChica{
    border:solid white 2px;
   

    /* display: flex;
    flex-direction: row;

    justify-content: center;
    flex-wrap: wrap;
   padding: 2%;
 overflow-y: scroll;
    align-items: center;
    overflow-y: scroll; */
    height: 95%;

display: flex;
flex-direction: row;
flex-wrap: wrap;
justify-content: flex-start;
align-items: flex-start;

  overflow-y: scroll;
  width: 100%;
margin:0;
    
}

#contenedorCarrouselVistaProducto{
    border:solid white 1px;
    height: 50%;
    overflow-y: hidden;
    margin:1px auto auto auto;
    display: flex;
    align-items: center;
    justify-content: center;

    background-color: black;
   


}

#contenedorCarrouselVistaProducto img{
         width:auto;
    height:auto;
    /* border:solid white 2px; */
}

#contenedorDetallesVistaProducto{
    border:solid white 1px;
    height: 34%;
    margin: 1px auto auto auto;
   
    color:white;

      background: rgba(67, 14, 87, 0.7); /*semitransparente */
    
   backdrop-filter: blur(12px); /*🔥 esto crea el efecto borroso */
   
}


/* deberia llamarse barraCategorias disponibles */
#barraFiltros{
    /* margin:2px 2px; */
    /* width: 99%; */
     border:solid white 1px;
     display: flex;
     flex-direction: row;
  border-radius: 4px;
     gap: 8%;
     height: 8%;
     background: rgba(97, 54, 112, 0.7); /*semitransparente */
    padding: 1%;
   backdrop-filter: blur(12px); /*🔥 esto crea el efecto borroso */
   
}

#barraFiltros button{
 color:white;

    /* width:10%; */
   
text-decoration: dashed;

font-weight: bold;



     margin-left: 2%;
     /* margin-bottom: 10px; */
      box-shadow: 5px 5px 10px rgba(245, 238, 238, 0.3);

     
}

#barraFiltros button:hover{
    background: rgb(186, 90, 206);
  /* backdrop-filter: blur(12px); */

          /* background: rgba(244, 236, 247, 0.7); /*semitransparente */
/*     
   backdrop-filter: blur(12px); 🔥 esto crea el efecto borroso  */
    



 
}
#barraFiltros button:active{
border: 2px inset  black;
 /* box-shadow: 5px 5px 10px rgba(0,0,0,0.3); */

 box-shadow: inset 0 2px 5px rgba(0,0,0,0.3);
color:rgb(24, 23, 23);

 font-weight: bold;
}


#contenidoBarraFiltros{
    border:solid grey 1px;
 

  
}




.miniCardProducto{
    
    border:solid #ba92d3 1px;
    padding: 1px;

    height: 25%;
   
   
        
   
}
/* ... */

